smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/control-with-no-colon.smithy
// Parse error at line 2, column 10 near `"1`: Expected: ':', but found '"'
$version "1.0"
